--- a/package.json
+++ b/package.json
@@ -13,31 +13,23 @@
     "deploy": "npm run build && pm2 start ecosystem.config.js"
   },
   "dependencies": {
-    "@google-cloud/text-to-speech": "^5.8.0",
-    "axios": "^1.6.7",
-    "body-parser": "^1.20.3",
-    "concurrently": "^8.2.2",
-    "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "google-cloud-text-to-speech": "^0.3.2",
-    "lucide-react": "^0.344.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "@google-cloud/text-to-speech": "^4.2.0",
+    "axios": "^1.3.4",
+    "express": "^4.18.2",
+    "lucide-react": "^0.284.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@eslint/js": "^9.9.1",
-    "@types/react": "^18.3.5",
-    "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react": "^4.3.1",
-    "autoprefixer": "^10.4.18",
-    "eslint": "^9.9.1",
-    "eslint-plugin-react-hooks": "^5.1.0-rc.0",
-    "eslint-plugin-react-refresh": "^0.4.11",
-    "globals": "^15.9.0",
-    "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "typescript": "^5.5.3",
-    "typescript-eslint": "^8.3.0",
-    "vite": "^5.4.2"
+    "@types/express": "^4.17.17",
+    "@types/node": "^18.15.0",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "@vitejs/plugin-react": "^3.1.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^4.9.3",
+    "vite": "^4.1.0"
   }
 }
